# dinopkg

./: .gitignore  Cargo.toml  README.md  RESOLVER_NOTES.md
.github/workflows/: rust.yml
crates/dinopkg-cli/: Cargo.toml
crates/dinopkg-cli/src/: command.rs  main.rs  run_script.rs
crates/dinopkg-cli/src/command/: init.rs  install.rs  run.rs
crates/dinopkg-npm-registry/: Cargo.toml
crates/dinopkg-npm-registry/src/: lib.rs
crates/dinopkg-package-json/: Cargo.toml
crates/dinopkg-package-json/src/: lib.rs  main.rs  util.rs
crates/validate_package_name/: Cargo.toml
crates/validate_package_name/src/: banned_names.rs  lib.rs
src/: command.rs  main.rs
src/command/: run.rs
