[package]
name = "dinopkg-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
color-eyre = "0.6.3"
owo-colors = "4.0.0"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
dinopkg-package-json = { path = "../dinopkg-package-json", features = [
    "tokio",
] }
exitcode = "1.1.2"
log = "0.4.22"
env_logger = "0.11.3"
dialoguer = "0.11.0"
camino = "1.1.7"
gix-config = "0.37.0"
maplit = "1.0.2"
serde_json = "1.0.120"
syntect = "5.2.0"
