[package]
name = "validate_package_name"
description = "validate npm package names"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
lazy_static = "1.5.0"
regex = "1.10.5"
thiserror = "1.0.62"
urlencoding = "2.1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
